src/snapshots/redmine_tui_draft__test_support__property_component_missing_status.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 16 }
00: "│ 作 成 者         user1                   " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"作" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"成" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"者" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"u" fg=Reset bg=Reset mod=NONE, 17:"s" fg=Reset bg=Reset mod=NONE, 18:"e" fg=Reset bg=Reset mod=NONE, 19:"r" fg=Reset bg=Reset mod=NONE, 20:"1" fg=Reset bg=Reset mod=NONE
01: "│ 作 成 日         2026/01/01              " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"作" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"成" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"日" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"2" fg=Reset bg=Reset mod=NONE, 19:"6" fg=Reset bg=Reset mod=NONE, 20:"/" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"1" fg=Reset bg=Reset mod=NONE, 23:"/" fg=Reset bg=Reset mod=NONE, 24:"0" fg=Reset bg=Reset mod=NONE, 25:"1" fg=Reset bg=Reset mod=NONE
02: "│ 更 新 日         2026/01/04              " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"更" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"新" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"日" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"2" fg=Reset bg=Reset mod=NONE, 19:"6" fg=Reset bg=Reset mod=NONE, 20:"/" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"1" fg=Reset bg=Reset mod=NONE, 23:"/" fg=Reset bg=Reset mod=NONE, 24:"0" fg=Reset bg=Reset mod=NONE, 25:"4" fg=Reset bg=Reset mod=NONE
03: "│ ス テ ー タ ス     (unknown)               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"ス" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"テ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"ー" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"タ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ス" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"(" fg=Blue bg=Reset mod=BOLD, 17:"u" fg=Blue bg=Reset mod=BOLD, 18:"n" fg=Blue bg=Reset mod=BOLD, 19:"k" fg=Blue bg=Reset mod=BOLD, 20:"n" fg=Blue bg=Reset mod=BOLD, 21:"o" fg=Blue bg=Reset mod=BOLD, 22:"w" fg=Blue bg=Reset mod=BOLD, 23:"n" fg=Blue bg=Reset mod=BOLD, 24:")" fg=Blue bg=Reset mod=BOLD
04: "│ ト ラ ッ カ ー     Bug                     " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"ト" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"ラ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"ッ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"カ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ー" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"B" fg=Reset bg=Reset mod=NONE, 17:"u" fg=Reset bg=Reset mod=NONE, 18:"g" fg=Reset bg=Reset mod=NONE
05: "│ 優 先 度         major                   " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"優" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"先" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"度" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"m" fg=Reset bg=Reset mod=NONE, 17:"a" fg=Reset bg=Reset mod=NONE, 18:"j" fg=Reset bg=Reset mod=NONE, 19:"o" fg=Reset bg=Reset mod=NONE, 20:"r" fg=Reset bg=Reset mod=NONE
06: "│ プ ロ ジ ェ ク ト   Sample Project          " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"プ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"ロ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"ジ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"ェ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ク" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"ト" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"S" fg=Reset bg=Reset mod=NONE, 17:"a" fg=Reset bg=Reset mod=NONE, 18:"m" fg=Reset bg=Reset mod=NONE, 19:"p" fg=Reset bg=Reset mod=NONE, 20:"l" fg=Reset bg=Reset mod=NONE, 21:"e" fg=Reset bg=Reset mod=NONE, 23:"P" fg=Reset bg=Reset mod=NONE, 24:"r" fg=Reset bg=Reset mod=NONE, 25:"o" fg=Reset bg=Reset mod=NONE, 26:"j" fg=Reset bg=Reset mod=NONE, 27:"e" fg=Reset bg=Reset mod=NONE, 28:"c" fg=Reset bg=Reset mod=NONE, 29:"t" fg=Reset bg=Reset mod=NONE
07: "│ 担 当 者         user1                   " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"担" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"当" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"者" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"u" fg=Blue bg=Reset mod=NONE, 17:"s" fg=Blue bg=Reset mod=NONE, 18:"e" fg=Blue bg=Reset mod=NONE, 19:"r" fg=Blue bg=Reset mod=NONE, 20:"1" fg=Blue bg=Reset mod=NONE
08: "│ 対 象 バ ー ジ ョ ン v1.2.3                  " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"対" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"象" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"バ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"ー" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ジ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:"ョ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:"ン" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"v" fg=Reset bg=Reset mod=NONE, 17:"1" fg=Reset bg=Reset mod=NONE, 18:"." fg=Reset bg=Reset mod=NONE, 19:"2" fg=Reset bg=Reset mod=NONE, 20:"." fg=Reset bg=Reset mod=NONE, 21:"3" fg=Reset bg=Reset mod=NONE
09: "│ 開 始 日         2025/12/09              " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"開" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"始" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"日" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"2" fg=Reset bg=Reset mod=NONE, 19:"5" fg=Reset bg=Reset mod=NONE, 20:"/" fg=Reset bg=Reset mod=NONE, 21:"1" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"/" fg=Reset bg=Reset mod=NONE, 24:"0" fg=Reset bg=Reset mod=NONE, 25:"9" fg=Reset bg=Reset mod=NONE
10: "│ 期 日           2025/12/19              " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"期" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"日" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 7:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"2" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"2" fg=Reset bg=Reset mod=NONE, 19:"5" fg=Reset bg=Reset mod=NONE, 20:"/" fg=Reset bg=Reset mod=NONE, 21:"1" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"/" fg=Reset bg=Reset mod=NONE, 24:"1" fg=Reset bg=Reset mod=NONE, 25:"9" fg=Reset bg=Reset mod=NONE
11: "│ 進 捗 率         100%  ━━━━━━━━━━━━      " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"進" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"捗" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"率" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 9:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"1" fg=Reset bg=Reset mod=NONE, 17:"0" fg=Reset bg=Reset mod=NONE, 18:"0" fg=Reset bg=Reset mod=NONE, 19:"%" fg=Reset bg=Reset mod=NONE, 22:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 23:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 24:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 25:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 26:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 27:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 28:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 29:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 30:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 31:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 32:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 33:"━" fg=Rgb(122, 162, 247) bg=Reset mod=NONE
12: "│ 予 定 工 数       - h                     " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"予" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"定" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"工" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"数" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"-" fg=Reset bg=Reset mod=NONE, 18:"h" fg=Reset bg=Reset mod=NONE
13: "│ 実 績 工 数       - h                     " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"実" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"績" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"工" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"数" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 11:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"-" fg=Reset bg=Reset mod=NONE, 18:"h" fg=Reset bg=Reset mod=NONE
14: "│ カ テ ゴ リ ー     category1               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"カ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 4:"テ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 6:"ゴ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 8:"リ" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 10:"ー" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 12:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 13:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"c" fg=Reset bg=Reset mod=NONE, 17:"a" fg=Reset bg=Reset mod=NONE, 18:"t" fg=Reset bg=Reset mod=NONE, 19:"e" fg=Reset bg=Reset mod=NONE, 20:"g" fg=Reset bg=Reset mod=NONE, 21:"o" fg=Reset bg=Reset mod=NONE, 22:"r" fg=Reset bg=Reset mod=NONE, 23:"y" fg=Reset bg=Reset mod=NONE, 24:"1" fg=Reset bg=Reset mod=NONE
15: "                                        "
