src/snapshots/redmine_tui_draft__test_support__property_component_process_a_on_spent_time.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 40, height: 17 }
00: "作 成 者               user1               " | 0:"作" fg=Reset bg=Reset mod=NONE, 2:"成" fg=Reset bg=Reset mod=NONE, 4:"者" fg=Reset bg=Reset mod=NONE, 20:"u" fg=Reset bg=Reset mod=NONE, 21:"s" fg=Reset bg=Reset mod=NONE, 22:"e" fg=Reset bg=Reset mod=NONE, 23:"r" fg=Reset bg=Reset mod=NONE, 24:"1" fg=Reset bg=Reset mod=NONE
01: "作 成 日               2026/01/01          " | 0:"作" fg=Reset bg=Reset mod=NONE, 2:"成" fg=Reset bg=Reset mod=NONE, 4:"日" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"6" fg=Reset bg=Reset mod=NONE, 24:"/" fg=Reset bg=Reset mod=NONE, 25:"0" fg=Reset bg=Reset mod=NONE, 26:"1" fg=Reset bg=Reset mod=NONE, 27:"/" fg=Reset bg=Reset mod=NONE, 28:"0" fg=Reset bg=Reset mod=NONE, 29:"1" fg=Reset bg=Reset mod=NONE
02: "更 新 日               2026/01/04          " | 0:"更" fg=Reset bg=Reset mod=NONE, 2:"新" fg=Reset bg=Reset mod=NONE, 4:"日" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"6" fg=Reset bg=Reset mod=NONE, 24:"/" fg=Reset bg=Reset mod=NONE, 25:"0" fg=Reset bg=Reset mod=NONE, 26:"1" fg=Reset bg=Reset mod=NONE, 27:"/" fg=Reset bg=Reset mod=NONE, 28:"0" fg=Reset bg=Reset mod=NONE, 29:"4" fg=Reset bg=Reset mod=NONE
03: "ス テ ー タ ス           進 行 中 (accepted)    " | 0:"ス" fg=Blue bg=Reset mod=NONE, 2:"テ" fg=Blue bg=Reset mod=NONE, 4:"ー" fg=Blue bg=Reset mod=NONE, 6:"タ" fg=Blue bg=Reset mod=NONE, 8:"ス" fg=Blue bg=Reset mod=NONE, 10:" " fg=Blue bg=Reset mod=NONE, 11:" " fg=Blue bg=Reset mod=NONE, 12:" " fg=Blue bg=Reset mod=NONE, 13:" " fg=Blue bg=Reset mod=NONE, 14:" " fg=Blue bg=Reset mod=NONE, 15:" " fg=Blue bg=Reset mod=NONE, 16:" " fg=Blue bg=Reset mod=NONE, 17:" " fg=Blue bg=Reset mod=NONE, 18:" " fg=Blue bg=Reset mod=NONE, 19:" " fg=Blue bg=Reset mod=NONE, 20:"進" fg=Reset bg=Reset mod=NONE, 22:"行" fg=Reset bg=Reset mod=NONE, 24:"中" fg=Reset bg=Reset mod=NONE, 26:"(" fg=Reset bg=Reset mod=NONE, 27:"a" fg=Reset bg=Reset mod=NONE, 28:"c" fg=Reset bg=Reset mod=NONE, 29:"c" fg=Reset bg=Reset mod=NONE, 30:"e" fg=Reset bg=Reset mod=NONE, 31:"p" fg=Reset bg=Reset mod=NONE, 32:"t" fg=Reset bg=Reset mod=NONE, 33:"e" fg=Reset bg=Reset mod=NONE, 34:"d" fg=Reset bg=Reset mod=NONE, 35:")" fg=Reset bg=Reset mod=NONE
04: "ト ラ ッ カ ー           Bug                 " | 0:"ト" fg=Reset bg=Reset mod=NONE, 2:"ラ" fg=Reset bg=Reset mod=NONE, 4:"ッ" fg=Reset bg=Reset mod=NONE, 6:"カ" fg=Reset bg=Reset mod=NONE, 8:"ー" fg=Reset bg=Reset mod=NONE, 20:"B" fg=Reset bg=Reset mod=NONE, 21:"u" fg=Reset bg=Reset mod=NONE, 22:"g" fg=Reset bg=Reset mod=NONE
05: "優 先 度               major               " | 0:"優" fg=Reset bg=Reset mod=NONE, 2:"先" fg=Reset bg=Reset mod=NONE, 4:"度" fg=Reset bg=Reset mod=NONE, 20:"m" fg=Reset bg=Reset mod=NONE, 21:"a" fg=Reset bg=Reset mod=NONE, 22:"j" fg=Reset bg=Reset mod=NONE, 23:"o" fg=Reset bg=Reset mod=NONE, 24:"r" fg=Reset bg=Reset mod=NONE
06: "プ ロ ジ ェ ク ト         Sample Project      " | 0:"プ" fg=Reset bg=Reset mod=NONE, 2:"ロ" fg=Reset bg=Reset mod=NONE, 4:"ジ" fg=Reset bg=Reset mod=NONE, 6:"ェ" fg=Reset bg=Reset mod=NONE, 8:"ク" fg=Reset bg=Reset mod=NONE, 10:"ト" fg=Reset bg=Reset mod=NONE, 20:"S" fg=Reset bg=Reset mod=NONE, 21:"a" fg=Reset bg=Reset mod=NONE, 22:"m" fg=Reset bg=Reset mod=NONE, 23:"p" fg=Reset bg=Reset mod=NONE, 24:"l" fg=Reset bg=Reset mod=NONE, 25:"e" fg=Reset bg=Reset mod=NONE, 27:"P" fg=Reset bg=Reset mod=NONE, 28:"r" fg=Reset bg=Reset mod=NONE, 29:"o" fg=Reset bg=Reset mod=NONE, 30:"j" fg=Reset bg=Reset mod=NONE, 31:"e" fg=Reset bg=Reset mod=NONE, 32:"c" fg=Reset bg=Reset mod=NONE, 33:"t" fg=Reset bg=Reset mod=NONE
07: "担 当 者               user1               " | 0:"担" fg=Blue bg=Reset mod=NONE, 2:"当" fg=Blue bg=Reset mod=NONE, 4:"者" fg=Blue bg=Reset mod=NONE, 6:" " fg=Blue bg=Reset mod=NONE, 7:" " fg=Blue bg=Reset mod=NONE, 8:" " fg=Blue bg=Reset mod=NONE, 9:" " fg=Blue bg=Reset mod=NONE, 10:" " fg=Blue bg=Reset mod=NONE, 11:" " fg=Blue bg=Reset mod=NONE, 12:" " fg=Blue bg=Reset mod=NONE, 13:" " fg=Blue bg=Reset mod=NONE, 14:" " fg=Blue bg=Reset mod=NONE, 15:" " fg=Blue bg=Reset mod=NONE, 16:" " fg=Blue bg=Reset mod=NONE, 17:" " fg=Blue bg=Reset mod=NONE, 18:" " fg=Blue bg=Reset mod=NONE, 19:" " fg=Blue bg=Reset mod=NONE, 20:"u" fg=Blue bg=Reset mod=NONE, 21:"s" fg=Blue bg=Reset mod=NONE, 22:"e" fg=Blue bg=Reset mod=NONE, 23:"r" fg=Blue bg=Reset mod=NONE, 24:"1" fg=Blue bg=Reset mod=NONE
08: "対 象 バ ー ジ ョ ン       -                   " | 0:"対" fg=Reset bg=Reset mod=NONE, 2:"象" fg=Reset bg=Reset mod=NONE, 4:"バ" fg=Reset bg=Reset mod=NONE, 6:"ー" fg=Reset bg=Reset mod=NONE, 8:"ジ" fg=Reset bg=Reset mod=NONE, 10:"ョ" fg=Reset bg=Reset mod=NONE, 12:"ン" fg=Reset bg=Reset mod=NONE, 20:"-" fg=Reset bg=Reset mod=NONE
09: "開 始 日               2025/12/09          " | 0:"開" fg=Reset bg=Reset mod=NONE, 2:"始" fg=Reset bg=Reset mod=NONE, 4:"日" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"5" fg=Reset bg=Reset mod=NONE, 24:"/" fg=Reset bg=Reset mod=NONE, 25:"1" fg=Reset bg=Reset mod=NONE, 26:"2" fg=Reset bg=Reset mod=NONE, 27:"/" fg=Reset bg=Reset mod=NONE, 28:"0" fg=Reset bg=Reset mod=NONE, 29:"9" fg=Reset bg=Reset mod=NONE
10: "期 日                 2025/12/19          " | 0:"期" fg=Reset bg=Reset mod=NONE, 2:"日" fg=Reset bg=Reset mod=NONE, 20:"2" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"2" fg=Reset bg=Reset mod=NONE, 23:"5" fg=Reset bg=Reset mod=NONE, 24:"/" fg=Reset bg=Reset mod=NONE, 25:"1" fg=Reset bg=Reset mod=NONE, 26:"2" fg=Reset bg=Reset mod=NONE, 27:"/" fg=Reset bg=Reset mod=NONE, 28:"1" fg=Reset bg=Reset mod=NONE, 29:"9" fg=Reset bg=Reset mod=NONE
11: "進 捗 率               100                 " | 0:"進" fg=Blue bg=Reset mod=NONE, 2:"捗" fg=Blue bg=Reset mod=NONE, 4:"率" fg=Blue bg=Reset mod=NONE, 6:" " fg=Blue bg=Reset mod=NONE, 7:" " fg=Blue bg=Reset mod=NONE, 8:" " fg=Blue bg=Reset mod=NONE, 9:" " fg=Blue bg=Reset mod=NONE, 10:" " fg=Blue bg=Reset mod=NONE, 11:" " fg=Blue bg=Reset mod=NONE, 12:" " fg=Blue bg=Reset mod=NONE, 13:" " fg=Blue bg=Reset mod=NONE, 14:" " fg=Blue bg=Reset mod=NONE, 15:" " fg=Blue bg=Reset mod=NONE, 16:" " fg=Blue bg=Reset mod=NONE, 17:" " fg=Blue bg=Reset mod=NONE, 18:" " fg=Blue bg=Reset mod=NONE, 19:" " fg=Blue bg=Reset mod=NONE, 20:"1" fg=Reset bg=Reset mod=NONE, 21:"0" fg=Reset bg=Reset mod=NONE, 22:"0" fg=Reset bg=Reset mod=NONE
12: "予 定 工 数                                 " | 0:"予" fg=Reset bg=Reset mod=NONE, 2:"定" fg=Reset bg=Reset mod=NONE, 4:"工" fg=Reset bg=Reset mod=NONE, 6:"数" fg=Reset bg=Reset mod=NONE
13: "実 績 工 数                                 " | 0:"実" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"績" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"工" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:"数" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 32:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 33:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 34:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 35:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 36:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 37:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 38:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 39:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
14: "解 決 方 法             -                   " | 0:"解" fg=Reset bg=Reset mod=NONE, 2:"決" fg=Reset bg=Reset mod=NONE, 4:"方" fg=Reset bg=Reset mod=NONE, 6:"法" fg=Reset bg=Reset mod=NONE, 20:"-" fg=Reset bg=Reset mod=NONE
15: "コ ン ポ ー ネ ン ト       component1          " | 0:"コ" fg=Reset bg=Reset mod=NONE, 2:"ン" fg=Reset bg=Reset mod=NONE, 4:"ポ" fg=Reset bg=Reset mod=NONE, 6:"ー" fg=Reset bg=Reset mod=NONE, 8:"ネ" fg=Reset bg=Reset mod=NONE, 10:"ン" fg=Reset bg=Reset mod=NONE, 12:"ト" fg=Reset bg=Reset mod=NONE, 20:"c" fg=Reset bg=Reset mod=NONE, 21:"o" fg=Reset bg=Reset mod=NONE, 22:"m" fg=Reset bg=Reset mod=NONE, 23:"p" fg=Reset bg=Reset mod=NONE, 24:"o" fg=Reset bg=Reset mod=NONE, 25:"n" fg=Reset bg=Reset mod=NONE, 26:"e" fg=Reset bg=Reset mod=NONE, 27:"n" fg=Reset bg=Reset mod=NONE, 28:"t" fg=Reset bg=Reset mod=NONE, 29:"1" fg=Reset bg=Reset mod=NONE
16: "Tags                                    " | 0:"T" fg=Reset bg=Reset mod=NONE, 1:"a" fg=Reset bg=Reset mod=NONE, 2:"g" fg=Reset bg=Reset mod=NONE, 3:"s" fg=Reset bg=Reset mod=NONE
